Homepage footer padding fix
Padding was too high

--- a/sass/home.scss
+++ b/sass/home.scss
@@ -249,7 +249,7 @@
 // LOCATION
 #location{
 	color:white;
-	padding:100px 25%;
+	padding:100px 15%;
 	text-align: center;
 	margin-top:40px;
 	background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../img/schiedam.jpg");
